[project]
name = "learn-stable-baseline3"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "stable-baselines3 (>=2.4.1,<3.0.0)",
    "pettingzoo (>=1.24.3,<2.0.0)",
    "jupyterlab (>=4.3.4,<5.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "supersuit (>=3.9.3,<4.0.0)",
    "tensorboard (>=2.18.0,<3.0.0)",
    "gym (>=0.26.2,<0.27.0)"
]

[tool.poetry.dependencies]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


